--- a/BattleTanks/Config/DefaultEngine.ini
+++ b/BattleTanks/Config/DefaultEngine.ini
@@ -9,4 +9,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/Blueprints/BattleTanksGameMode_BP.BattleTanksGameMode_BP_C
 
